--- a/src/app/tasks/tasks-container/tasks-container.component.less
+++ b/src/app/tasks/tasks-container/tasks-container.component.less
@@ -4,19 +4,11 @@
 
 .tasks-header{
   height: @headerHeight;
-}
-
-.task-list{
-  width: 100%;
-  height: calc(100% - @headerHeight);
+  .horizontal-container;
 }
 
 .mode-buttons{
   float: right;
   justify-content: right;
   .horizontal-container;
-}
-
-.tasks-container-list{
-  width: 100%;
 }
