--- a/src/app/tasks/details-container/project-details/project-details.component.less
+++ b/src/app/tasks/details-container/project-details/project-details.component.less
@@ -1,44 +1,6 @@
 @import '../../../../styles.less';
 
-
-.project-details{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-
-    box-sizing: border-box;
-}
-
-/* TODO: te same style są w tesk-details.component.css. Spróbować przenieść to do styles.css */
-
-
-.mat-content{
-    font-size: medium;
-    padding:10px;
-}
-
-/* .mat-expanded, .mat-content{
-    font-size: small;
-    padding: 5px;
-} */
-
-/* TODO: przenieść to do wspólnego stylu. Taki sam styl jest w tasks.components */
-.stage-main{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-}
-
-/* TODO: to też przenieść */
-.stage-list-item{
-    display: flex;
-}
-
-/* TODO: to po małych przeróbkach też może być wrzucone */
-.stage-info-icons{
-    display: flex;
-    flex-wrap: wrap;
-    width: fit-content;
-
+.info-element{
+  .tasks-element;
+  background-color: @color1;
 }
