--- a/src/app/tasks/details-container/task-details/task-details.component.less
+++ b/src/app/tasks/details-container/task-details/task-details.component.less
@@ -1,37 +1,34 @@
 
 @import '../../../../styles.less';
 
-.form{
-    box-sizing: border-box;
-    height: 100%;
-    overflow: auto;
-}
-
 .label-item{
     padding: 3px;
     border: 1px solid black;
     display: flex;
     margin: 2px;
+    min-width: 40px;
+}
+
+.label-name{
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .labels-list{
     display:flex;
 }
 
-.remove-label{
-    width: 15px;
-    height: 15px;
-    margin-left: 5px;
-    margin-top: auto;
-    margin-bottom: auto;
-    background-color: blue;
+.remove-icon{
+  .remove-item-icon;
+  width: 10px;
+  height: 10px;
+  margin-left: auto;
+  margin-right: 0;
+  .base-button;
 }
 
-.remove-label:hover{
-    cursor:pointer;
-}
-
-.subtask-checkbox-icon{
+// TOD: przygotować to jakoś lepiej
+.subtask-active-icon{
     background-color: aqua;
 }
 
@@ -49,72 +46,7 @@
     margin-right: 2px;
 }
 
-.subtask-item{
-    display: flex;
-}
-
-.subtask-name{
-    width: 100%;
-    font-size: 1.2em;
-    padding: 3px;
-    cursor: default;
-}
-
-.edit-subtask{
-    /* TODO: ustawić ikonę */
-    /* background-color: yellowgreen; */
-}
-
-.remove-subtask{
-    /* TODO: ustawić ikonę */
-    /* background-color: yellow; */
-}
-
-.subtask-item-buttons{
-    display: flex;
-    margin-top: auto;
-    margin-bottom: auto;
-}
-
-
-.button{
-    cursor: pointer;
-}
-
 .checkbox{
     cursor: pointer;
 }
-
-/* TODO: spróbować zrozumieć, dlaczego to nie chce działać po umieszczeniu w styles.css */
-.form-group-header{
-    padding: 5px!important;
-    height: auto!important;
-}
-
-.mat-content{
-    font-size: medium;
-}
-
-.star{
-    width: fit-content;
-    height: fit-content;
-    font-size: 2.7em;
-    margin-top: auto;
-    margin-bottom: auto;
-    margin-left: 10px;
-    /* TODO: zrobić kształt gwiazdki */
-}
-
-.star:hover{
-    cursor: pointer;
-}
-
-.important-star{
-    color: gold;
-}
-
-.not-important-star{
-    color:slategray;
-}
-
 
