Day scheduler style

--- a/src/app/tasks/tasks-container/day-schedule/day-schedule.component.html
+++ b/src/app/tasks/tasks-container/day-schedule/day-schedule.component.html
@@ -1,4 +1,4 @@
-<div class="day-view shadow app-panel">
+<div class="panel horizontal-container">
   <div class="tasks-container">
     <app-mini-calendar></app-mini-calendar>
     <app-tasks-list #current_day_tasks></app-tasks-list>
