--- a/src/app/tasks/tasks-container/day-schedule/day-scheduler/day-scheduler.component.less
+++ b/src/app/tasks/tasks-container/day-schedule/day-scheduler/day-scheduler.component.less
@@ -1,153 +1,115 @@
-@import '../../../../../styles.less';
+@import "../../../../../styles.less";
 
-.day-schedule-view{
-  display: flex;
-  flex-direction: row;
+.day-schedule-view {
+  .horizontal-container;
   height: 100%;
 }
 
-.day-table{
-  border-collapse: collapse;
-  border: 2px solid black;
-  /* width: 100%; */
-  width: initial;
-}
-
-.hour-header{
+.hour-column {
+  .column;
   width: 5em;
 }
 
-.hour-column{
-  width: 5em;
-  list-style: none;
-  border: 1px solid black;
-  padding: 0;
-  margin:0;
-  height: fit-content;
-}
-
-.task-column{
-  list-style: none;
-  border: 1px solid black;
+.task-column {
+  .column;
   width: 100%;
-  padding: 0;
-  margin:0;
+}
+
+.column {
+  border: 1px solid black;
+  list-style: none;
   height: fit-content;
+  padding: 0;
+  margin: 0;
 }
 
-.task-header{
-
-}
-
-.hour-cell{
-  /* height: 0.8em; */
-  height: 0.694%;;
+.hour-cell {
   box-sizing: border-box;
 }
 
-
-.upper-hour-cell{
-  /* border-right: 0.5px solid grey; */
+.upper-hour-cell {
   text-align: center;
-
 }
 
-.bottom-hour-cell{
-  /* border-right: 0.5px solid grey; */
-  /* border-bottom: 1px solid black; */
-  /* width: 100%; */
+.bottom-hour-cell {
 }
 
-.last-task-cell{
+.last-task-cell {
   border-bottom: 1px solid black;
 }
 
-.upper-task-cell{
-  /* border-bottom: 0.5px dotted grey; */
+.upper-task-cell {
 }
 
-.bottom-task-cell{
-  /* border-bottom: 1px solid black; */
-  /* border-bottom: 0.5px dotted grey; */
+.bottom-task-cell {
 }
 
-.middle-task-cell{
+.middle-task-cell {
   border-bottom: 0.5px dotted black;
 }
 
-.task-cell{
+.task-cell {
   /* height: 0.8em; */
-  height: 0.694%;
+  // height: 0.694%;
   position: relative;
   width: 100%;
   box-sizing: border-box;
 }
 
-.drop-container{
+.drop-container {
   width: 100%;
   height: 100%;
 }
 
-.task{
-  /* position: absolute; */
-  /* top: 0; */
+.task {
+  .list-item;
   width: 50%;
-  height: 5em;
-  background-color: aqua;
   position: absolute;
   z-index: 1;
   padding: 0;
 }
 
-.drag-handler{
+.drag-handler {
   width: 100%;
   height: 100%;
 }
 
-.selected-cell{
+.selected-cell {
   background-color: antiquewhite;
 }
 
-.task-name{
-  padding: 5;
+.task-name {
+  padding: @standardPadding;
+  font-size: @fontSize * 1.2;
 }
 
-
-.dragHandle{
+.drag-handle {
   position: absolute;
   background-color: red;
   height: 2px;
   width: 100%;
   cursor: ns-resize;
-}
 
-.dragHandle.top{
-  top:0;
+  &.top {
+    top: 0;
+  }
+  &.bottom {
+    bottom: 0;
+  }
 }
-
-.dragHandle.bottom{
-  bottom:0;
-}
-
 
 .cdk-drag-preview {
   box-sizing: border-box;
   border-radius: 4px;
-  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-              0 8px 10px 1px rgba(0, 0, 0, 0.14),
-              0 3px 14px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14),
+    0 3px 14px 2px rgba(0, 0, 0, 0.12);
 }
-
-/* .cdk-drag-placeholder {
-  opacity: 0.4;
-  z-index: -100;
-} */
 
 .cdk-drag-animating {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
-.drag-placeholder{
+.drag-placeholder {
   height: 100%;
   width: 50%;
   /* background: #fff; */
