--- a/src/styles.less
+++ b/src/styles.less
@@ -243,6 +243,13 @@
   margin: 0;
 }
 
+.full-horizontal-container{
+  // .horizontal-container;
+  display: flex;
+  flex-direction: row;
+  height: 100%;
+}
+
 .vertical-container{
   display: flex;
   width: 100%;
